--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,23 @@
   <div id="lstars2"></div>
   <div id="lstars3"></div>
 </div>
-
+<svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+  y="0px" viewBox="0 0 1920 1280" style="enable-background:new 0 0 1920 1280;" xml:space="preserve">
+  <style type="text/css">
+    .st0 {
+      fill-rule: evenodd;
+      clip-rule: evenodd;
+      fill: #FF0000;
+      stroke: #000000;
+      stroke-width: 3;
+    }
+  </style>
+  <path class="st0" d="M581,461l73,226L462,547h238L508,687L581,461z" />
+  <path class="st0" d="M814,804c59.1,0,107,47.9,107,107s-47.9,107-107,107s-107-47.9-107-107S754.9,804,814,804z M814,862
+	c27.1,0,49,21.9,49,49s-21.9,49-49,49s-49-21.9-49-49S786.9,862,814,862z" />
+  <path class="st0" d="M960,473c59.1,0,107,47.9,107,107s-47.9,107-107,107l0,0c-59.1,0-107-47.9-107-107S900.9,473,960,473z M960,531
+	c-27.1,0-49,21.9-49,49s21.9,49,49,49s49-21.9,49-49S987.1,531,960,531z" />
+</svg>
 
   <div class="scrollElement"></div>
   
